feat: worked on confiramtion

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon & Preload -->
+    <link rel="icon" type="image/svg+xml" href="/flowva.svg" />
+    <link rel="preload" as="image" href="/flowva_logo-xVpZI3-U.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kombai-trail</title>
   </head>
